# ESRF_ID10_SURF

./: .buildinfo  CLI.html  ESRF_ID10_SURF.GID.html  ESRF_ID10_SURF.GISAXS.html  ESRF_ID10_SURF.XRR.html  ESRF_ID10_SURF.html  Examples.html  GID.html  GIXS.html  README.md  XRR.html  benchmark_footprint.py  genindex.html  index.html  modules.html  objects.inv  processing_CLI.yaml  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage_example.html  usage_example.ipynb
.github/workflows/: documentation.yml  publish.yml
_modules/: index.html
_modules/ESRF_ID10_SURF/GID/: GID.html
_modules/ESRF_ID10_SURF/GISAXS/: GISAXS.html
_modules/ESRF_ID10_SURF/XRR/: XRR.html
_sources/: CLI.rst.txt  ESRF_ID10_SURF.GID.rst.txt  ESRF_ID10_SURF.GISAXS.rst.txt  ESRF_ID10_SURF.rst.txt  Examples.rst.txt  GID.rst.txt  XRR.rst.txt  index.rst.txt  usage_example.ipynb.txt
docs/: ESRF_ID10_SURF.GID.rst  ESRF_ID10_SURF.GISAXS.rst  ESRF_ID10_SURF.XRR.rst  Examples.rst  GID.rst  GIXS.rst  XRR.rst  conf.py  index.rst  modules.rst  usage_example.ipynb
src/ESRF_ID10_SURF/: __init__.py  base.py  calib_mythen.py  cli.py
src/ESRF_ID10_SURF/GID/: GID.py  __init__.py
src/ESRF_ID10_SURF/GISAXS/: GISAXS.py  __init__.py
src/ESRF_ID10_SURF/GIXS/: GIXS.py
src/ESRF_ID10_SURF/XRR/: XRR.py  __init__.py
tests/: test_import.py  test_refactor.py  test_xrr_process.py  test_xrr_qmap.py
