[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esrf_id10_surf"
dynamic = ["version"]
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A package for analyzing surface X-ray scattering data from the ID10 beamline at the ESRF."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "lmfit",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ESRF_ID10_SURF.__version__"}
